crates/plotnik-lib/tests/04-emit/anchors/field_anonymous.txt
Q = (pair key: (property_identifier) . value: _)
==== diagnostics ====
error: no `pair` places these children in this adjacency
 --> query.ptk:1:6
  |
1 | Q = (pair key: (property_identifier) . value: _)
  |      ^^^^
  |
help: `.` skips anonymous tokens and extras but never another named node; drop the anchor to match these children in any positions
